tests/NormalTests/paczka2/big_fuzzy/89466817.err
Error in line 4: S649 S32 6,8
Error in line 14: S649 S32 42,7
Error in line 26: oNwHNlomO6F S32 226,7
Error in line 24: YYp5cCAB8zL S649 14,8
Error in line 34: h4xQ17 S20 85,3
Error in line 43: zRXca2XC S32 83,
Error in line 37: zRXca2XC S32 231,7
Error in line 40: S649 S649 13,5
Error in line 51: YYp5cCAB8zL S649 70,6
Error in line 68: oNwHNlomO6F S32 77,61
Error in line 59: h4xQ17 S649 11,4
Error in line 67: S649 S32 17,8
Error in line 60: zRXca2XC S20 74,9
Error in line 85: G86X4gSu S649 36,]
Error in line 87: YYp5cCAB8zL S20 142,4
Error in line 92: G86X4gSu S649 92,7
Error in line 95: G86X4gSu S32 48,2
Error in line 77: NCgiMdDWKYQ S256 77,9
Error in line 105: h4xQ17 S649 68,2
Error in line 106: h4xQ17 S32 37,2
Error in line 97: zRXca2XC S256 6,2
Error in line 91: oNwHNlomO6F S32 87,9
Error in line 117: YYp5cCAB8zL S256 24,1
Error in line 128: oNwHNlomO6F S256 77,3
Error in line 130: oNwHNlomO6F S649 91,8
Error in line 132: NCgiMdDWKYQ S20 12,3
Error in line 120: h4xQ17 S256 24,0
Error in line 135: YYp5cCAB8zL S20 169,2
Error in line 140: h4xQ17 S20 38,9
Error in line 149: zRXca2XC S256 58,8
Error in line 158: YYp5cCAB8zL S256 89,3
Error in line 164: S649 S32 60,6
Error in line 165: S649 S649 52,7
Error in line 173: G86X4gSu S20 324,7
Error in line 174: G86X4gSu S32 96,7
Error in line 179: h4xQ17 S20 4,	
Error in line 178: G86X4gSu S649 36,1
Error in line 187: S649 S256 40,8
Error in line 185: G86X4gSu S32 13,6
Error in line 194: G86X4gSu S20 0,3
Error in line 209: YYp5cCAB8zL S32 96,21
Error in line 206: oNwHNlomO6F S20 72,4
Error in line 214: zRXca2XC S32 77,5
Error in line 213: S649 S649 22,7
Error in line 218: YYp5cCAB8zL S32 144,2
Error in line 227: S649 S649 30,4
Error in line 231: YYp5cCAB8zL S20 25,0
Error in line 232: YYp5cCAB8zL S30 46,8
Error in line 243: NCgiMdDWKYQ S32 1,z
Error in line 237: h4xQ17 S256 133,8
Error in line 246: NCgiMdDWKYQ S3Z 7,7
